--- a/app/src/main/res/layout/list_item_mydog.xml
+++ b/app/src/main/res/layout/list_item_mydog.xml
@@ -31,15 +31,14 @@
         android:textColor="@color/font" />
 
     <TextView
-        android:text="Thousandway"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/breedText"
         android:textSize="18sp"
         android:layout_marginBottom="23dp"
         android:layout_alignBottom="@+id/imgDogAccount"
+        android:textColor="@color/font"
         android:layout_alignLeft="@+id/nameDogAccount"
-        android:layout_alignStart="@+id/nameDogAccount"
-        android:textColor="@color/font" />
+        android:layout_alignStart="@+id/nameDogAccount" />
 
 </RelativeLayout>
