improve add new dog

--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -41,4 +41,8 @@
         android:id="@+id/Maltese"
         android:title="Maltese"/>
 
+    <item
+        android:id="@+id/thousand_way"
+        android:title="Thousand Way"/>
+
 </menu>
