--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -16,7 +16,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -30,20 +33,16 @@
                 android:layout_alignParentStart="true">
 
                 <ImageView
-                    android:layout_width="209dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="183dp"
                     app:srcCompat="@drawable/camera2"
-                    android:id="@+id/captureView"
-                    android:layout_marginStart="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:layout_marginRight="16dp"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintRight_toLeftOf="parent"
+                    android:id="@+id/captureView" />
 
                 <EditText
-                    android:layout_width="384dp"
+                    android:layout_width="0dp"
                     android:layout_height="46dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -57,22 +56,21 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/captureButton"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0" />
 
                 <TextView
-                    android:layout_width="258dp"
+                    android:layout_width="226dp"
                     android:layout_height="31dp"
                     android:ems="10"
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:id="@+id/breedText"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/nameText"
-                    app:layout_constraintRight_toLeftOf="@+id/searchMydog"
-                    app:layout_constraintLeft_toLeftOf="parent" />
+                    tools:layout_editor_absoluteX="16dp"
+                    app:layout_constraintTop_toTopOf="@+id/searchMydog" />
 
                 <EditText
-                    android:layout_width="372dp"
+                    android:layout_width="0dp"
                     android:layout_height="42dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -128,7 +126,7 @@
 
                 <TextView
                     android:text="Noticeable"
-                    android:layout_width="373dp"
+                    android:layout_width="0dp"
                     android:layout_height="32dp"
                     android:id="@+id/FBUser"
                     android:background="@color/com_facebook_button_background_color_focused_disabled"
@@ -138,10 +136,11 @@
                     android:textColor="@color/cardview_light_background"
                     app:layout_constraintRight_toRightOf="@+id/searchMydog"
                     android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/ageText" />
+                    app:layout_constraintTop_toBottomOf="@+id/ageText"
+                    app:layout_constraintHorizontal_bias="0.0" />
 
                 <EditText
-                    android:layout_width="259dp"
+                    android:layout_width="231dp"
                     android:layout_height="39dp"
                     android:inputType="textPersonName"
                     android:ems="10"
@@ -156,7 +155,7 @@
                 <fragment
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="377dp"
+                    android:layout_width="0dp"
                     android:layout_height="138dp"
                     tools:context="com.siriporn.dogfindertest.MapsActivity"
                     app:layout_constraintRight_toRightOf="parent"
@@ -168,8 +167,8 @@
                 <ScrollView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    tools:layout_editor_absoluteY="8dp"
-                    tools:layout_editor_absoluteX="8dp">
+                    tools:layout_editor_absoluteY="377dp"
+                    tools:layout_editor_absoluteX="16dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
