--- a/app/src/main/res/layout/content_found_post.xml
+++ b/app/src/main/res/layout/content_found_post.xml
@@ -116,7 +116,7 @@
         <EditText
             android:id="@+id/noticeDog"
             android:hint="Write your post..."
-            android:layout_width="371dp"
+            android:layout_width="0dp"
             android:layout_height="52dp"
             android:textSize="18sp"
             android:gravity="top|left"
@@ -142,7 +142,9 @@
             android:textColor="@color/cardview_light_background"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/map" />
 
         <fragment
             android:id="@+id/map"
