--- a/app/src/main/res/layout/content_lost_post_acitivity.xml
+++ b/app/src/main/res/layout/content_lost_post_acitivity.xml
@@ -65,7 +65,6 @@
         <EditText
             android:id="@+id/noticeDog"
             android:hint="Write your post"
-            android:layout_width="350dp"
             android:layout_height="131dp"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/nameLostPost"
@@ -76,7 +75,8 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="16dp"
-            android:gravity="top"/>
+            android:gravity="top"
+            android:layout_width="match_parent" />
 
         <Button
             android:text="POST"
