--- a/app/src/main/res/layout/list_item_searchdog.xml
+++ b/app/src/main/res/layout/list_item_searchdog.xml
@@ -46,7 +46,7 @@
 
         <ImageView
             android:id="@+id/picFoundPost"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="293dp"
             app:srcCompat="@color/wallet_bright_foreground_disabled_holo_light"
             app:layout_constraintTop_toBottomOf="@+id/noticeDog"
@@ -60,7 +60,7 @@
         <TextView
             android:id="@+id/noticeDog"
             android:text="noticeable : (notice)"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="28dp"
             app:layout_constraintTop_toBottomOf="@+id/foundUserPicPost"
             android:textSize="18sp"
