--- a/app/src/main/res/layout/content_dog_add_info.xml
+++ b/app/src/main/res/layout/content_dog_add_info.xml
@@ -33,13 +33,13 @@
                 android:layout_alignParentStart="true">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="183dp"
+                    android:layout_height="131dp"
                     app:srcCompat="@drawable/camera2"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="parent"
-                    android:id="@+id/captureView" />
+                    android:id="@+id/captureView"
+                    android:layout_width="303dp" />
 
                 <EditText
                     android:layout_width="0dp"
@@ -66,7 +66,7 @@
                     android:textAlignment="center"
                     android:textSize="18sp"
                     android:id="@+id/breedText"
-                    tools:layout_editor_absoluteX="16dp"
+                    tools:layout_editor_absoluteX="32dp"
                     app:layout_constraintTop_toTopOf="@+id/searchMydog" />
 
                 <EditText
@@ -167,8 +167,8 @@
                 <ScrollView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    tools:layout_editor_absoluteY="377dp"
-                    tools:layout_editor_absoluteX="16dp">
+                    tools:layout_editor_absoluteY="474dp"
+                    tools:layout_editor_absoluteX="32dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
