--- a/app/src/main/res/layout/layout_mydog.xml
+++ b/app/src/main/res/layout/layout_mydog.xml
@@ -27,14 +27,14 @@
             android:src="@drawable/addcircle"/>
 
         <ListView
-            android:layout_width="411dp"
-            android:layout_height="599dp"
             android:id="@+id/dogListView"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toTopOf="parent"
-            android:headerDividersEnabled="true"
-            android:footerDividersEnabled="true" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintVertical_bias="0.100000024"/>
 
 
 </android.support.constraint.ConstraintLayout>
