--- a/app/src/main/res/layout/list_item_samedog.xml
+++ b/app/src/main/res/layout/list_item_samedog.xml
@@ -5,9 +5,10 @@
 
         <ImageView
             android:id="@+id/imgDogAccount"
-            android:layout_width="197dp"
-            android:layout_height="222dp"
-            android:src="@drawable/com_facebook_profile_picture_blank_square"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:adjustViewBounds="false"
+
              />
 
         <TextView
@@ -20,5 +21,6 @@
             android:paddingBottom="15dp"
             android:layout_gravity="bottom"
             android:textColor="@android:color/white"
-            android:background="#55000000"/>
+            android:background="#55000000"
+            />
 </FrameLayout>
