--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,87 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_alignParentTop="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_alignParentTop="true">
 
     <TextView
+        android:id="@+id/text_details"
         android:layout_width="312dp"
         android:layout_height="141dp"
-        android:id="@+id/text_details"
-        android:textSize="35sp"
-        android:textAlignment="center"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
+        android:textAlignment="center"
+        android:textSize="35sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="32dp"
-        android:layout_height="32dp"
-        android:layout_width="276dp"
-        android:textSize="18sp"
-        android:ellipsize="none"
-        app:layout_constraintTop_toBottomOf="@+id/text_details" />
-
-
     <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="133dp"
         android:layout_height="128dp"
-        app:srcCompat="@drawable/logo"
-        android:id="@+id/imageView5"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
     <TextView
-        android:text="Welcome to DogFinder"
+        android:id="@+id/textView2"
         android:layout_width="249dp"
         android:layout_height="104dp"
-        android:id="@+id/textView2"
-        android:textSize="35sp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="Welcome to PawPal"
+        android:textAlignment="center"
+        android:textSize="35sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp" />
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
     <Button
-        android:text="LET'S GO !"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/temLogin"
-        android:onClick="TemLoginClicked"
-        app:layout_constraintTop_toBottomOf="@+id/login_button"
-        android:layout_marginEnd="16dp"
+        android:id="@+id/register"
+        android:text="Register Here!"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        />
+    <Button
+        android:id="@+id/temLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
+        android:gravity="bottom"
+        android:onClick="TemLoginClicked"
+        android:text="LET'S GO !"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register"
+        tools:layout_editor_absoluteY="447dp" />
+
 
 </android.support.constraint.ConstraintLayout>
 
