--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,159 +4,257 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="@dimen/activity_margin"
+    android:layout_marginEnd="@dimen/activity_margin"
+    android:layout_marginStart="@dimen/activity_margin"
+    android:layout_marginTop="@dimen/activity_margin"
+    android:background="#f8f8f9"
     android:orientation="vertical"
     tools:context="com.siriporn.dogfindertest.RegisterActivity">
 
 
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:paddingBottom="25dp"
-        android:paddingTop="25dp"
-        android:text="Sign Up!"
-        android:textSize="28sp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/email"
-        style="@style/FacebookEdittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:maxLines="1"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/password"
-        style="@style/FacebookEdittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:textSize="18sp" />
-
-    <EditText
-        android:id="@+id/confirmPassword"
-        style="@style/FacebookEdittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:maxLines="1"
-        android:textSize="18sp" />
-
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="1">
-
-        <EditText
-            android:id="@+id/firstname"
-            style="@style/FacebookEdittext"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:hint="First Name"
-            android:maxLines="1"
-            android:textSize="18sp" />
 
-        <EditText
+            android:orientation="vertical">
 
-            android:id="@+id/lastname"
-            style="@style/FacebookEdittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:hint="Last Name"
-            android:maxLines="1"
-            android:textSize="18sp" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:text="Sign Up!"
+                android:textColor="@color/black"
+                android:textSize="28sp"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="0dp" />
 
-    <EditText
-        android:id="@+id/telNumber"
-        style="@style/FacebookEdittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Tel"
-        android:inputType="numberDecimal"
-        android:maxLines="1"
-        android:textSize="18sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_email"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/email"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_email"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/activity_register_password"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/activity_register_password_alert"
+                    android:textColor="#ff0000"
+                    android:textSize="@dimen/text_size" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/password"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:text="@string/activity_register_confirm_password"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/activity_register_confirm_password_alert"
+                    android:textColor="#ff0000"
+                    android:textSize="@dimen/text_size" />
+
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/confirmPassword"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_confirm_password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/name"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:hint="@string/activity_register_name"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_tel"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
 
 
-    <EditText
-        android:id="@+id/address"
-        style="@style/FacebookEdittext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Address"
-        android:textSize="18sp" />
+            <EditText
+                android:id="@+id/telNumber"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_tel"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="5dp"
-        android:weightSum="1">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_tel2"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
 
-        <EditText
-            android:id="@+id/facebookName"
-            style="@style/FacebookEdittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:hint="Facebook"
-            android:maxLines="1"
-            android:textSize="18sp" />
+            <EditText
+                android:id="@+id/telNumber2"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_tel2"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size" />
 
-        <EditText
-            android:id="@+id/lineID"
-            style="@style/FacebookEdittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:hint="Line ID"
-            android:maxLines="1"
-            android:textSize="18sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_address"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/address"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/activity_register_address"
+                android:textSize="@dimen/text_size" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_facebook"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/facebookName"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:hint="@string/activity_register_facebook"
+                android:maxLines="1"
+                android:textSize="@dimen/text_size" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/activity_register_lineID"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size" />
+
+            <EditText
+                android:id="@+id/lineID"
+                style="@style/FacebookEdittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:hint="@string/activity_register_lineID"
+                android:maxLines="1"
+                android:layout_marginBottom="16dp"
+                android:textSize="@dimen/text_size" />
 
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom"
-        android:orientation="horizontal"
-        android:weightSum="1">
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/green_button"
+                    android:onClick="onClickRegister"
+                    android:text="@string/activity_register_confirm"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:background="@drawable/green_button"
-            android:onClick="onClickRegister"
-            android:text="OK"
-            android:textColor="@color/black" />
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="0.5"
+                    android:background="@drawable/red_button"
+                    android:onClick="onClickCancel"
+                    android:text="@string/activity_register_cancel"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size" />
 
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:background="@drawable/red_button"
-            android:onClick="onClickCancel"
-            android:text="Cancel"
-            android:textColor="@color/black" />
+            </LinearLayout>
+        </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
