--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
         <!--<item name="windowBackground">@color/background</item>-->
     </style>
 
@@ -27,7 +28,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="FacebookEdittext">r
+
+    <style name="FacebookEdittext">
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/rounded_border</item>
         <item name="android:paddingTop">8dp</item>
