--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,11 +69,16 @@
         android:layout_marginStart="16dp"
         android:gravity="bottom"
         android:onClick="TemLoginClicked"
-        android:text="LET'S GO !"
+        android:text="Login!"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/register"
-        tools:layout_editor_absoluteY="447dp" />
+        app:layout_constraintTop_toBottomOf="@+id/register" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GO"
+        android:onClick="goMenu"/>
 
 
 </android.support.constraint.ConstraintLayout>
