--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,6 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:title="Home" />
+        <item
             android:id="@+id/nav_my_dog"
             android:icon="@drawable/user"
             android:title="My Dog" />
